--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(matrix_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(matrix_cpp library.cpp library.h Matrix.cpp Matrix.h)
+add_library(matrix_cpp Matrix.cpp Matrix.h)
