Ora c'è solo matrix.h e il main.cpp (compila)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(matrix_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(test2 main.cpp matrix.cpp transposed_matrix.cpp transposed_matrix.h)
+add_executable(test2 main.cpp)
