aggiustati tipi di ritorno

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(matrix_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(test2 main.cpp matrix_impl.h matrix.h)
+add_executable(test main.cpp)
